--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@pancakeswap/sdk",
+  "name": "@flash/sdk",
   "license": "MIT",
   "version": "2.4.0",
-  "description": "🛠 An SDK for building applications on top of Pancakeswap.",
+  "description": "🛠 An SDK for building applications on top of Flash Swap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancake-swap-sdk.git",
+  "repository": "https://github.com/garagedefi/flash-swap-sdk.git",
   "keywords": [
-    "pancakeswap",
+    "flashswap",
     "bsc"
   ],
   "module": "dist/sdk.esm.js",
