--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@flash/sdk",
+  "name": "@flash-swap/sdk",
   "license": "MIT",
-  "version": "2.4.0",
+  "version": "1.0.0",
   "description": "🛠 An SDK for building applications on top of Flash Swap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
