--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@flash-swap/sdk",
   "license": "MIT",
-  "version": "1.0.1",
+  "version": "1.0.5-test",
   "description": "🛠 An SDK for building applications on top of Flash Swap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -22,7 +22,7 @@
     "prepublishOnly": "tsdx build"
   },
   "dependencies": {
-    "@pancakeswap-libs/pancake-swap-core": "^0.1.0",
+    "@flash-swap/flash-swap-core": "^0.1.0",
     "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.1",
